# fpga

./: .gitignore  .travis.yml  CMakeLists.txt  README.md  build-tools.py  icestick.txt  tapit.pl  utest.vlib
avr/: CMakeLists.txt  README  blink.c  shieldprog.c  shieldprog.py  spiart_slave.c  uart_echo.c
cmake/Platform/: AVR.cmake
cmake/toolchains/: arduino-uno.toolchain.in
drivers/: CMakeLists.txt  adc082S021.v  adc082S021_tb.v  dacx311.v  dacx311_tb.v
modules/modbus/: CMakeLists.txt  README.md  err_tb.v  mcrc.v  mcrc_tb.v  modbus_endpoint.v  modbus_rtu.v  mtest.vlib  rx_tb.v  tx_tb.v
modules/scope/: CMakeLists.txt  scope.v  scope_acq.v  scope_acq_tb.v  scope_buffer.v  scope_buffer_tb.v  scope_trigger.v  scope_trigger_tb.v
modules/spi/: CMakeLists.txt  README.md  spi_master.v  spi_master_ctrl.v  spi_master_inst.v  spi_master_tb.v  spi_mux.v  spi_mux_tb.v  spi_rom.v  spi_slave.v  spi_slave_async.v  spi_slave_async_tb.v  spi_slave_tb.v
modules/uart/: CMakeLists.txt  README.md  uart.v  uart_baud.v  uart_rx.v  uart_rx_filter.v  uart_rx_tb.v  uart_tx.v  uart_tx_tb.v
tests/: CMakeLists.txt  frac_div_tb.v  spi_master_tb.v  spi_slave_tb.v  uart_baud_tb.v  uart_echo_tb.v  uart_loop_tb.v  uart_rx_tb.v  uart_tx_tb.v  utest_tb.v
top/blink/: CMakeLists.txt  README.md
top/icedaq/: CMakeLists.txt  README.md  clock_test.pcf  clock_test.v  daq_test.pcf  daq_test.v  icedaq.pcf  idrom.hex  spi_test.pcf  spi_test.v  spi_test_tb.v
top/icestick/: CMakeLists.txt  README.md  daikin.list  daikin.py  gendaikin.py  icela.pcf  icela.v  icela_tb.v  irda.pcf  irda.v  irda_tb.v  irdala.pcf  irdala.v  uart_echo_tb.v  uart_echo_top.v  uart_spam.v  ublink.v
top/icetest_r2/: CMakeLists.txt  README.md  iceblink.pcf  iceblink.v  spitest_it2.pcf  spitest_it2.v  spitest_it2_tb.v
top/modstick/: CMakeLists.txt  modstick.pcf  modstick_logic.v  modstick_top.v
top/spiart/: CMakeLists.txt  README.md  spiart.pcf  spiart_logic.v  spiart_logic_tb.v  spiart_top.v
top/uart_echo/: CMakeLists.txt  README.md  uart_echo_tb.v  uart_echo_top.pcf  uart_echo_top.v  uart_spam.v  uart_spam2.v
util/: CMakeLists.txt  afifo.v  afifo_tb.v  frac_div.py  frac_div.v  frac_div_tb.v  gensine.py  log2.vlib  sfifo.v  sfifo_tb.v  sine8x256.txt  timeit.pl  utest.vlib  utest_tb.v
